<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">wakeup</string>
    <string name="action_settings">Settings</string>
    <string name="service_started">Example Service started</string> 
    <string name="service_label">Example Service Label</string> 
    <string name="hello_world">Hello world!</string> 
    <string name="frequency">Frequency</string> 
    <string name="duration">Duration</string> 
    <string name="vibrations">Vibrations</string> 
    <string name="nightMode">No Notifications During Night (9:00PM - 6:00 AM)</string> 
    <string name="weekendMode">No Notifications During WeekEnds</string> 
    <string name="mainTitle">Wake Me Up</string> 
    <string name="frequencyUnit">in minutes</string> 
    <string name="durationUnit">in seconds</string> 
    <string name="vibrationUnit">count</string> 
    <string name="start">Start</string> 
    <string name="close">Close</string> 
    <string name="exit">Exit</string>

</resources>
